--- a/templates/nav_con.html.twig
+++ b/templates/nav_con.html.twig
@@ -541,5 +541,6 @@
     <!-- End Go Top Area --></footer>
 </html>
 {% block Javascript %}
-    
+      <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.6.0/js/bootstrap.min.js" integrity="sha512-F+D/XZP9m42Kp8sJ+Uy/fnkPY6TfU6QFVK6zjKdYhL6amX9A2M8O/cHgFjEoJGz15ld52p8MGVLfIdhJpA1K7A==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+
 {% endblock %}
