--- a/templates/back_office/evenement/new.html.twig
+++ b/templates/back_office/evenement/new.html.twig
@@ -64,6 +64,13 @@
                                             {{ form_errors(form.description) }}
                                         </div>
                                     </div>
+                                            <div class="col-lg-12">
+                                        <div class="mb-3">
+                                            {{ form_label(form.image) }}
+                                            {{ form_widget(form.image) }}
+                                            {{ form_errors(form.image) }}
+                                        </div>
+                                    </div>
                                     <!-- Start Contact Area -->
 		                            
             
