--- a/templates/events/list.html.twig
+++ b/templates/events/list.html.twig
@@ -1,51 +1,57 @@
 {% extends 'nav_con.html.twig' %}
  
  {% block body %}
-<main>
-{% block content %}
 
+{% block content %}
+<main>
 			<div class="album py-5 bg-light">
 				<div class="container">
-		<div class="row row-cols-1 row-cols-sm-2 row-cols-md-3 g-3">
 					
 
-                         	{% for event in evenements %} 
-	            <div class="col"> 
- 	               <div class="card mb-4 shadow-sm">		
+                         	
+	                    <div class="row"> 
+						{% for event in evenements %} 
+ 	                        <div style="margin-left:250px;width:800px"class="card mb-4 shadow-sm">		
 		  
-          {#  <img src="{{ qr_code_data_uri(  "Nom  :" ~ event.nom ~ "\n Date : " ~ event.date | date ~ "\n Prix : " ~ event.prix  ,  ) }}"	#}
-		  <img src=	"{{ asset('/uploads/' ~ event.image) }}">
+          
+		                             <img src=	"{{ asset('/uploads/' ~ event.image) }}">
 
-		    <div class="card-body">
+		                        <div class="card-body">
+ 
+                                    	<p class="card-text">{{event.nom}}</p>
+			                        	<small class="text-muted">{{event.capacite}}</small>
 
-             	<p class="card-text">{{event.nom}}</p>
-				<small class="text-muted">{{event.capacite}}</small>
-
-              	<div class="d-flex justify-content-between align-items-center">
-                <div class="btn-group">
-                  <button type="button" class="btn btn-sm btn-outline-secondary">
-							<a href="{{ path('app_evenement_show_front', {id :event.id()}) }}">Voir Détails</a>
-									</button>
-				  <button type="button" class="btn btn-sm btn-outline-secondary" onclick="msg()">
-							<a href="{{ path('app_participation_new', {event: event.id()}) }}">Participer</a>
-									</button>
-                </div>
-                <small> <button type="button" class="btn btn-sm btn-outline-success">
-							<a href="{{ path('app_evenement_like', {user:2, id: event.id()}) }}">
+                                	 <div class="d-flex justify-content-between align-items-center">
+                                           <div class="btn-group">
+                                           
+										     <button type="button" class="btn btn-sm btn-outline-secondary">
+							                  <a href="{{ path('app_evenement_show_front', {id :event.id()}) }}">Voir Détails</a>
+								         	</button>
+				                         
+										    <button type="button" class="btn btn-sm btn-outline-secondary" onclick="msg()">
+							                <a href="{{ path('app_participation_new', {event: event.id()}) }}">Participer</a>
+						        			</button>
+                                          
+										   <button type="button" class="btn btn-sm btn-outline-success">
+						                 	<a href="{{ path('app_evenement_like', { id: event.id()}) }}">
 													{{ bootstrap_icon('hand-thumbs-up') }}
 													{{ event.likes|length }}
+								     	   </button> 
+										     </div>
+			                         </div>
+                                </div>
 
-									</button> 
-									</small>
-              </div>
-            </div>
-	
-           </div>
-	
-		    {% endfor %}
+                            </div>
+						                   {% endfor %}
+
        
-		</div>
-		</div>
+		          
+
+		    </div>
+			</div>
+					    </div>
+
+
 		</main>
 		
 			
